--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,10 @@
 
 .header-address {
     font-style: normal;
+    font-size: 16px;
+    letter-spacing: 0.02em;
+    line-height: 1.5;
+    color: #434455;
 }
 
 .contacts {
