--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,8 @@
 /*Section 3*/
 
 .main-page-text {
-    color: var(--navyblue, #2e2f42);
+    color: #2e2f42;
+    background-color: #f4f4fd;
     text-align: center;
     font-family: Roboto;
     font-size: 36px;
@@ -182,7 +183,11 @@
     text-transform: capitalize;
 }
 
-
+.main-button-portfolio{
+    font: size 16px; 
+    line-height:1.5;
+    letter-spacing:0.02em; 
+}
 
 /*footer*/
 
