--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,6 @@
     background-color: #ffffff;
 }
 
-:root {
-    --brand-color: #ffffff;
-}
 
 /*header*/
 .header {
@@ -55,7 +52,7 @@
     list-style: none;
 }
 
-.guidance {
+.guidance link {
     color: #2e2f42;
     font-weight: 500;
     font-size: 16px;
@@ -63,41 +60,12 @@
     letter-spacing: 0.02em;
 }
 
-.guidance:hover {
-    color: #404bbf;
-}
-
-.guidance:focus {
-    color: #404bbf;
-}
 
 .header-address {
     font-style: normal;
     font-size: 16px;
     letter-spacing: 0.02em;
     line-height: 1.5;
-    color: #434455;
-}
-
-.contacts {
-    color: #434455;
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-}
-
-.contacts:hover {
-    color: #404bbf;
-}
-
-.contacts:focus {
-    color: #404bbf;
-}
-
-.contacts:root {
     color: #434455;
 }
 
@@ -122,7 +90,6 @@
 
 .main-button {
     background: #4d5ae5;
-    font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -143,7 +110,6 @@
 
 .main-second-section {
     color: var(--navyblue, #2e2f42);
-    font-family: Roboto;
     font-size: 20px;
     font-style: normal;
     font-weight: 500;
@@ -160,7 +126,6 @@
     }
 .main-second-section-text {
     color: var(--slate, #434455);
-    font-family: Roboto;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -210,7 +175,6 @@
 
 .footer-dark-bg-text {
     color: var(--cloud, #f4f4fd);
-    font-family: Roboto;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -223,7 +187,7 @@
 
 .body-portfolio {
     color: #434455;
-    font-family: "Roboto", sans-serif;
+    
 }
 
 .first-item-header {
@@ -248,7 +212,6 @@
 
 .main-button-portfolio {
     line-height: 1.5;
-    font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     letter-spacing: 0.04em;
@@ -258,6 +221,7 @@
 }
 
 .main-button-portfolio:hover {
+
     color: #ffffff;
     background-color: #404bbf;
 }
