--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
     background: var(--white, #fff);
     flex-shrink: 0;
     font-family: "Raleway", sans-serif;
-    font-weight: 800;
+    font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
@@ -73,6 +73,7 @@
 
 .header-address {
     font-style: normal;
+    font-size: 16px;
 }
 
 .contacts {
@@ -83,6 +84,12 @@
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
+}
+.header-address-list-item link{
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
 }
 
 .contacts:hover {
@@ -218,7 +225,7 @@
     font-family: "Raleway", sans-serif;
     font-size: 18px;
     font-style: normal;
-    font-weight: 800;
+    font-weight: 700;
     justify-content: center;
     line-height: 1.17;
     letter-spacing: 0.03em;
