--- a/css/styles.css
+++ b/css/styles.css
@@ -207,42 +207,31 @@
 }
 
 /* Section 4 */
-
-/*Section 4*/
-
-.light-bg {
-    background:var(--cloud, #f4f4fd);
-    flex-shrink:0;
+.section-title-portfolio {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    text-transform: capitalize;
+    color: #2e2f42;
 }
 
-.fourth-section {
-    padding-bottom:0px;
-    justify-content:center;
-    background-color:#ffffff;
+.section-subtitle-portfolio {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
 }
 
-.main-fourth-section {
-    color:var(--navyblue,#2e2f42);
-    text-align:center;
-    font-family:Roboto;
-    font-size:20px;
-    font-style:normal;
-    font-weight:500;
-    line-height:1.2;
-    letter-spacing:0.02em;
+.section-text-portfolio {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
 }
-
-.main-fourth-section-text {
-    color: var(--slate, #434455);
-    text-align:center;
-    font-family:Roboto;
-    font-size:16px;
-    font-style:normal;
-    font-weight:400;
-    line-height:1.5;
-    letter-spacing:0.02em;
-}
-
 /*footer*/
 
 .footer-dark-bg {
