--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,7 @@
 
 
 .section-team {
-    background:#f4f4fd;
+    background color:#f4f4fd;
 }
 
 .section-team-title {
@@ -185,7 +185,7 @@
 }
 
 .section-team-item {
-    background:#fff;
+    background color:#fff;
 }
 
 .section-team-subtitle {
