--- a/css/styles.css
+++ b/css/styles.css
@@ -72,11 +72,12 @@
 }
 
 .header-address {
+    color: var(--slate, #434455);
     font-style:normal;
     font-size:16px;
     line-height:1.5;
     letter-spacing:0.02em;
-    color:#434455;
+   
 }
 
 .contacts {
@@ -175,13 +176,14 @@
 }
 
 .section-team-title {
+    color: var(--navyblue#2e2f42);
     font-weight:700;
     font-size:36px;
     line-height:1.11;
     letter-spacing:0.02em;
     text-align:center;
     text-transform:capitalize;
-    color:#2e2f42;
+    
 }
 
 .section-team-item {
@@ -189,48 +191,53 @@
 }
 
 .section-team-subtitle {
+    color: var(--navyblue#2e2f42);
     font-weight:500;
     font-size:20px;
     line-height:1.2;
     letter-spacing:0.02em;
     text-align:center;
-    color:#2e2f42;
+  
 }
 
 .section-team-text {
+    color: var(--slate, #434455);
     font-weight:400;
     font-size:16px;
     line-height:1.5;
     letter-spacing:0.02em;
     text-align:center;
-    color: #434455;
+ 
 }
 
 /* Section 4 */
 .section-title-portfolio {
+    color: var(--navyblue#2e2f42);
     font-weight:700;
     font-size:36px;
     line-height:1.11;
     letter-spacing:0.02em;
     text-align:center;
     text-transform:capitalize;
-    color:#2e2f42;
+    
 }
 
 .section-subtitle-portfolio {
+    color: var(--navyblue#2e2f42);
     font-weight:500;
     font-size:20px;
     line-height:1.2;
     letter-spacing:0.02em;
-    color:#2e2f42;
+    
 }
 
 .section-text-portfolio {
+    color: var(--slate, #434455);
     font-weight:400;
     font-size:16px;
     line-height:1.5;
     letter-spacing:0.02em;
-    color:#434455;
+   
 }
 /*footer*/
 
