--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,7 @@
 
 
 .section-team-name {
-    background-color:#f4f4fd;
+    background-color:#F4F4FD;
 }
 
 .section-team-title-name {
@@ -180,14 +180,14 @@
     font-weight:700;
     font-size:36px;
     line-height:1.11;
+    text-align: center;
     letter-spacing:0.02em;
-    text-align:center;
     text-transform:capitalize;
     
 }
 
 .section-team-item-name {
-    background-color:#fff;
+    background-color:#FFFFFF;
 }
 
 .section-team-subtitle-name {
@@ -202,7 +202,7 @@
 
 .section-team-text-name {
     color: var(--slate, #434455);
-    font-weight:400;
+    font-weight:500;
     font-size:16px;
     line-height:1.5;
     letter-spacing:0.02em;
