--- a/css/styles.css
+++ b/css/styles.css
@@ -206,9 +206,9 @@
  
 }
 
-
+/* section 4 */
 .section-title-portfolio {
-    color: var(--navyblue#2e2f42);
+    color:#2e2f42;
     font-weight:700;
     font-size:36px;
     line-height:1.11;
@@ -217,7 +217,9 @@
     text-transform:capitalize;
     
 }
-/* section 4 */
+
+
+
 .section-subtitle-portfolio {
     color:#2e2f42;
     font-weight:500;
@@ -233,6 +235,7 @@
     font-size:16px;
     line-height:1.5;
     letter-spacing:0.02em;
+
    
 }
 /*footer*/
