--- a/css/styles.css
+++ b/css/styles.css
@@ -79,13 +79,9 @@
     letter-spacing:0.02em;
    
 }
-.text {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;}
 
-.header-address-list-item link{
+
+.header-address-list-item {
     font-size:16px;
     line-height:1.5;
     letter-spacing:0.02em;
