--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,7 @@
 .body {
-    
+    color: #434455;
     font-family: "Roboto", sans-serif;
-    
-    
-    background-color: #ffffff;
+  background-color: #ffffff;
 }
 
 :root {
